--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     #- uses: actions/checkout@v2
     - name: Install Postgis
       uses: VForWater/postgis-action@v0.1
+    
+    - name: Docker vsersion
+      run: docker --version
       
     - name: Psql Version
       run: psql --version
