--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install depts
-      run: pip3 install sqlalchemy
+      run: pip3 install sqlalchemy psycopg2
 
     - name: Test
       run: python3 ./test.py
